<resources>
    <string name="app_name">DroneDrop</string>

    <string name="title_deliveries">Deliveries</string>
    <string name="title_requests">Requests</string>
    <string name="title_drones">Drones</string>
    <string name="title_contacts">Requests</string>
    <string name="title_settings">Settings</string>
    <string name="title_delivery_creation">New Delivery</string>
    <string name="title_delivery_accept">Accept Delivery Request</string>
    <string name="title_drone_add">Register Drone</string>

    <string name="title_login">Log in</string>
    <string name="title_signup">Sign up</string>

    <string name="text_input_username">Username</string>
    <string name="text_input_email">Email</string>
    <string name="text_input_password">Password</string>
    <string name="text_input_password_2">Repeat Password</string>
    <string name="text_input_delivery_email">Receiver Email</string>
    <string name="text_input_drone_add">Enter Serial Number</string>

    <string name="text_password_reset">Forgot your password?</string>
    <string name="text_create_account">Don´t have an Account?</string>

    <string name="text_button_login">Log In</string>
    <string name="text_button_signup">Sign Up</string>
    <string name="text_button_logout">Log out</string>
    <string name="text_button_new_delivery">New Delivery</string>
    <string name="text_button_confirm_location">Confirm Location</string>
    <string name="text_button_add_drone">Add Drone</string>


    <string name="text_deliver_state_complete">Completed</string>
    <string name="text_deliver_state_in_progress">In Progress</string>
    <string name="text_deliver_state_to_be_delivered">Waiting for Start Orders</string>
    <string name="text_deliver_state_to_be_confirmed">Waiting for Receiver Confirmation</string>

    <string name="hello_blank_fragment">subject to change</string>

    <string name="text_switch_settings_has_drone">Enable Drone Management</string>
    <string name="text_button_make_delivery_request">Make Delivery Request</string>

    <string name="prefix_delivery_pin">Drop-off Location for delivery from</string>
    <string name="prefix_drone_hardware_ID">Hardware ID :</string>
</resources>